[package]
name = "wmctrl"
description = "A wrapper for the command line tool wmctrl written in Rust"
repository = "https://github.com/Treborium/rust-wmctrl"

readme = "README.md"
keywords = ["wmctrl", "window", "manager", "wm", "linux"]
categories = ["api-bindings", "command-line-interface", "os::unix-apis", "os"]
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/wmctrl/latest/wmctrl/"

version = "0.1.8"
authors = ["Robert Fuchs <RobertFuchs97@gmail.com>"]
edition = "2018"

[lib]
name = "wmctrl"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.4"
